# CtrBootManager

./: .gitignore  .gitmodules  CMakeLists.txt  CtrBootManager.cbp  CtrBootManager.layout  DevkitArm3DS.cmake  Makefile  README.md  boot.cfg  changelog.txt  clean.sh  graphics.c  make.sh
cmake/: FindLIBCTRSHELL.cmake  FindLIBKAIRY.cmake  FindSFTD.cmake  Tools3DS.cmake
data/: a9lh.cfg  boot.cfg
source/: boot.c  config.c  config.h  config_new.c  costable.h  descriptor.cpp  descriptor.h  font.c  font.h  font1.c  font2.c  font_default.c  gfx.c  gfx.h  hooks.c  hooks.h  ini.c  ini.h  loader.c  loader.h  main.c  memory.h  menu.c  menu.h  menu_boot.c  menu_config.c  menu_more.c  menu_netloader.c  menu_netloader.h  menu_netloaderarm9.c  menu_netloaderarm9.h  menu_picker.c  picker.h  scanner.c  scanner.h  text.c  text.h  tinyxml2.cpp  tinyxml2.h  utility.c  (+1 more)
source/CakeBrah/: Makefile
source/CakeBrah/include/: brahma.h  utils.h
source/CakeBrah/source/: arm11.s  brahma.c  utils.s
source/CakeBrah/source/libkhax/: khaxinit.cpp  khaxinternal.h
source/arm9/: Makefile  a9lh.cfg  bootstrap.ld
source/arm9/source/: bs-start.s  common.h  hid.c  hid.h
source/arm9/stage2/: Makefile  stub.ld
source/arm9/stage2/payload/: Makefile  payload_stage2.ld  payload_stage2.specs
source/arm9/stage2/payload/source/: main.c
source/arm9/stage2/screen_init/: Makefile
source/arm9/stage2/source/: stage2.c  start.s
source/gui/: bgTop.c  gui.c  gui.h
source/hb_menu/: boot.c  descriptor.cpp  descriptor.h  font.h  font1.c  font2.c  gfx.c  gfx.h  netloader.c  netloader.h  scanner.c  scanner.h  smdh.h  text.c  tinyxml2.cpp  tinyxml2.h
source/libconfig/: ac_config.h  libconfig.c  scanner.c
